--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h3>Swodrfish HTTP Library</h3><br><br>
         <div class="output"></div>
     </div>
-    <script src="swordfishFetch.js"></script>
+    <script src="swordfish.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
