added $FA and SFX methods

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <div class="container">
         <h3>Swodrfish HTTP Library</h3><br><br>
         <div class="output"></div>
+        <ul>
+            <li>Sample text</li>
+            <li>Sample text</li>
+            <li>Sample text</li>
+            <li>Sample text</li>
+            <li>Sample text</li>
+            <li>Sample text</li>
+            <li>Sample text</li>
+            <li>Sample text</li>
+        </ul>
     </div>
     <script src="swordfish.js"></script>
     <script src="app.js"></script>
