$F SworFish Selector methods tuned up: spreading  arrays, returning if no parameter passed

--- a/index.html
+++ b/index.html
@@ -8,19 +8,23 @@
 </head>
 <body>
     <div class="container">
-        <h3>Swodrfish HTTP Library</h3><br><br>
+        <h1>Title</h1>
+        <h3>Swodrfish HTTP Library</h3><br>
+        <h3 class="second-line">second line</h3>
+        <br>
         <div class="output"></div>
         <ul>
             <li>Sample text</li>
             <li>Sample text</li>
             <li>Sample text</li>
-            <li>Sample text</li>
-            <li>Sample text</li>
+            <li class="inny">inny</li>
+            <li class="other">Sample text</li>
             <li>Sample text</li>
             <li>Sample text</li>
             <li>Sample text</li>
         </ul>
     </div>
+    <!-- <script src="notebook.js"></script> -->
     <script src="swordfish.js"></script>
     <script src="app.js"></script>
 </body>
