$FE metod added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <h3>Swodrfish HTTP Library</h3><br>
         <h3 class="second-line">second line</h3>
         <br>
-        <div class="output"></div>
+        <div class="output">
+            <button class="btn">click me</button>
+        </div>
         <ul>
             <li>Sample text</li>
             <li>Sample text</li>
